[package]
name = "MarketTrack"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
salvo = { version = "0.74", features = ["full"] }
tokio = { version = "1", features = ["macros"] }
yew = { version = "0.21", features = ["ssr"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
